@@ -3,8 +3,8 @@
 build clean install binary-arch binary-indep binary:
 	+dh $@ --parallel $(opt_no_act)
 
-build-arch: build-plain build-small
-	$(MAKE) -f debian/rules $(test_targets)
+# Runs tests, too, if and only if nocheck is unset (see below).
+build-arch:: build-plain build-small
 
 build-indep: debian/normal-build/Makefile
 	: 'Work around bug #478524'
@@ -72,8 +72,6 @@ debian/xzdec-build/Makefile: $(configure_input)
 $(autoreconf_products): $(autoreconf_sources)
 	autoreconf -is
 
-noop: ;
-
 small_flags_env =
 small_flags_env += DEB_CFLAGS_MAINT_STRIP='-O2 -O3'
 small_flags_env += DEB_CFLAGS_MAINT_PREPEND=-Os
@@ -83,9 +81,6 @@ opt_optimize_small = $(shell $(small_flags_env) $(flags_cmd))
 
 opt_no_act =
 opt_quiet =
-test_targets =
-test_targets += debian/test-plain-stamp
-test_targets += debian/test-xzdec-stamp
 
 # Unless noopt is set, use optimized CRC32 routine on the Hurd.
 ifeq (hurd,$(shell dpkg-architecture -qDEB_HOST_ARCH_OS))
@@ -114,8 +109,8 @@ ifneq (,$(filter quiet,$(DEB_BUILD_OPTIONS)))
     MAKEFLAGS += --quiet
 endif
 
-ifneq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-    test_targets = noop
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+build-arch:: debian/test-plain-stamp debian/test-xzdec-stamp
 endif
 
 # Build a tarball with the latest upstream version.
